fix: buttons with word wrap

--- a/source/sass/component/_button.scss
+++ b/source/sass/component/_button.scss
@@ -102,9 +102,8 @@ $c-button-border-width: var(--c-button-border-width, $border-width-button) !defa
             order: 1;
             display: inline-block;
             align-items: center;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            text-align: center;
+            overflow: visible;
 
             &--reverse {
                 order: 2;
@@ -113,7 +112,7 @@ $c-button-border-width: var(--c-button-border-width, $border-width-button) !defa
     }
 
     &.c-button--lg {
-        height: calc(#{$base} * 8); 
+        min-height: calc(#{$base} * 8); 
         min-width: calc(#{$base} * 12);
         padding: 0 calc(#{$base} * 5);
         font-size: $font-size-btn-lg; 
@@ -135,7 +134,7 @@ $c-button-border-width: var(--c-button-border-width, $border-width-button) !defa
     }
 
     &.c-button--md {
-        height: calc(#{$base} * 6); 
+        min-height: calc(#{$base} * 6); 
         min-width: calc(#{$base} * 9);
         padding: 0 calc(#{$base} * 4); 
         font-size: $font-size-btn-md; 
@@ -158,7 +157,7 @@ $c-button-border-width: var(--c-button-border-width, $border-width-button) !defa
 
     &.c-button--sm {
         letter-spacing: 0.1rem;
-        height: calc(#{$base} * 4.5);
+        min-height: calc(#{$base} * 4.5);
         min-width: calc(#{$base} * 6.75); 
         padding: 0 calc(#{$base} * 2); 
         font-size: $font-size-btn-sm; 
